--- a/css/style.css
+++ b/css/style.css
@@ -373,3 +373,13 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+
+
+/* ==========================================================================
+   Body
+   ========================================================================== */
+
+body{
+  background-image: url("./img/background.jpg");
+}
