Mise en place du background 2

--- a/css/style.css
+++ b/css/style.css
@@ -381,5 +381,5 @@ table {
    ========================================================================== */
 
 body{
-  background-image: url("./img/background.jpg");
+  background-image: url("../img/background.jpg");
 }
